<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="xyz.kbalto.inventory.EditorActivity">

        <RelativeLayout
            android:id="@+id/section_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/placeholder" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_photo_camera_white_48px" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/section_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="36dp"
            android:background="@android:color/white"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:id="@+id/name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                tools:text="@string/product_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textSize="24sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:id="@+id/description_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                tools:text="@string/product_description"
                android:inputType="textAutoComplete"
                android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/quantity"
                    android:textColor="#9E9E9E"
                    android:textSize="12sp" />

                <NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="64dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="#9E9E9E"
                    android:text="@string/product_price"/>

                <EditText
                    android:id="@+id/product_price"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_height="48dp"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:maxLines="1" />
            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/section_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp">


            <RelativeLayout
                android:id="@+id/stats_sold"
                android:layout_width="match_parent"
                android:layout_height="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/total_sold"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD" />

                <TextView
                    android:id="@+id/product_sold_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD"
                    tools:text="1" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stats_profit"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_below="@id/stats_sold">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/total_sales"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD" />

                <TextView
                    android:id="@+id/product_sold_profit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD"
                    tools:text="$100.00" />
            </RelativeLayout>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>